--- a/register/register.css
+++ b/register/register.css
@@ -1,14 +1,14 @@
 :root {
   font-size: 1rem;
-  --celadon: #b9d8c2;
-  --light-blue: #9ac2c9;
-  --cadet-gray: #8aa1b1;
+  --pink: #BE95C4;
+  --dark-purple: #5E548E;
+  --lavender: #9F86C0;
   --ebony: #4a5043;
   --gunmetal: #2a2d34;
 }
 
 body {
-  font-family: 'DM Sans', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .form-control,
@@ -28,13 +28,13 @@ code {
 }
 
 .register-card {
-  background-color: var(--celadon);
+  background-color: var(--pink);
   border-radius: 10px;
 }
 
 .btn-primary {
-  background-color: var(--cadet-gray);
-  border-color: var(--cadet-gray);
+  background-color: var(--lavender);
+  border-color: var(--lavender);
 }
 .btn-primary:first-of-type {
   margin-right: 1em;
@@ -45,5 +45,5 @@ code {
 .btn-primary:focus {
   background-color: var(--gunmetal);
   border-color: var(--gunmetal);
-  color: var(--celadon);
+  color: var(--pink);
 }
