--- a/profile/profile.css
+++ b/profile/profile.css
@@ -1,9 +1,6 @@
 body {
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: "Inter", sans-serif;
     background-color: #9ac9c9;
-    /* display:flexbox; */
-    /* justify-content: center; */
-    /* text-align: center; */
     height:100vh;
 }
 
@@ -29,6 +26,14 @@ header h1 {
     border-radius: 8px;
     margin-top: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-nav .nav-item:hover .nav-link {
+    color: var(--lavender)  !important;
+}
+.navbar {
+    background: linear-gradient(to right, var(--pink), var(--lavender));
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .blog {
@@ -84,7 +89,7 @@ header h1 {
     display: block;
     text-align: center;
     margin-top: 20px;
-    color: #4a5043;
+    color: var(--pink);
     font-weight: bold;
     text-decoration: none;
     padding-bottom: 20px;
